plugins {
    id "org.jetbrains.kotlin.jvm" version "2.0.0"
    id 'application'
}

dependencies {
    implementation project(':secp256k1-api')
    runtimeOnly project(':secp256k1-bouncy')
    runtimeOnly project(':secp256k1-foreign')
}

tasks.withType(JavaCompile).configureEach {
    options.release = 22
}

kotlin {
    jvmToolchain(22)
}

application {
//    mainClass = 'org.bitcoinj.secp256k1.kotlin.examples.Ecdsa'
    mainClass = 'org.bitcoinj.secp256k1.kotlin.examples.Schnorr'
}

run {
    def userHome = System.getProperty("user.home")
    systemProperty "java.library.path", findProperty("javaPath") ?: "${userHome}/.nix-profile/lib"
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
}

